tests/auto/qml/qqmlcomponent/data/RerequiredNotSet.qml
RequiredSetInSameFile {
    required i
} // error: we explicitly want required here, but it's not set
